# Bridge-Prediction

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: ARCHITECTURE.md  FEATURES.md  SUMMARY.md
experiments/2026-07-09/: 01_hyperparameter_tuning.ipynb  02_smote_resampling.ipynb  03_two_stage_classification.ipynb  04_advanced_feature_engineering.ipynb  05_advanced_boosting.ipynb  README.md
experiments/2026-07-10/: 01_combined_best_techniques.ipynb  README.md
experiments/2026-07-15/: 01_accuracy_push.ipynb  02_dds_features.ipynb  03_accuracy_push_with_dds.ipynb  04_class_imbalance_dds.ipynb  05_combined_data_source.ipynb  06_combined_data_v2_more_pbn.ipynb  07_angelfire_expansion.ipynb  08_baseline_dds_default.ipynb  README.md
experiments/2026-07-15/outputs/: combined_data_v2_test_comparison.csv  compute_dds_cache.py  (+2 more)
notebooks/: 01_data_extraction.ipynb  01_dataset_analysis.ipynb  02_eda_features.ipynb  03_modeling.ipynb  04_evaluation.ipynb  05_class_imbalance.ipynb  05_improvement_experiments.ipynb  06_final_evaluation.ipynb
notebooks_dds/: 01_data_extraction.ipynb  02_eda_features.ipynb  03_modeling.ipynb  04_evaluation.ipynb
scripts/: report.py  run_pipeline.py  validate_features.py  validate_parser.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  dds.py  engineer.py
src/models/: __init__.py  base.py  lightgbm_model.py  random_forest.py  xgboost_model.py
src/parser/: __init__.py  lin_parser.py  pbn_parser.py
src/preprocessing/: __init__.py  dataset_builder.py
(+32 files in other folders)
