[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bridge-prediction"
version = "0.1.0"
description = "ML-based bridge contract prediction from BBO LIN format records"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.45",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]
dev     = ["pytest>=7.0", "ruff>=0.4"]
experiments = ["imbalanced-learn>=0.12", "endplay>=0.5.11"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
